<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020.
  ~ The code used in this project is entirely owned by Roman P.
  ~ Code snippets / templates / etc. are mentioned and credited.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/format_list_bulleted"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_download_tracker"
                android:icon="@drawable/download"
                android:title="@string/menu_tracker"/>

        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/cog_outline"
                android:title="@string/action_settings"/>
    </group>
</menu>
