<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020.
  ~ The code used in this project is entirely owned by Roman P.
  ~ Code snippets / templates / etc. are mentioned and credited.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="net.bplaced.abzzezz.twistapp.ui.home.ShowList"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_list">
    </fragment>


    <fragment
            android:id="@+id/nav_download_tracker"
            android:name="net.bplaced.abzzezz.twistapp.ui.tracker.DownloadTrackerFragment"
            android:label="@string/menu_tracker"
            tools:layout="@layout/fragment_download_tracker"/>

    <fragment
            android:id="@+id/nav_settings"
            android:name="net.bplaced.abzzezz.twistapp.ui.settings.SettingsFragment"
            android:label="@string/action_settings"
            tools:layout="@layout/fragment_download_tracker"/>
</navigation>